--- a/Notebooks/backtest2.ipynb
+++ b/Notebooks/backtest2.ipynb
@@ -20,14 +20,25 @@
     "id": "kvUIGHxL_VPf",
     "outputId": "f7e20cac-e859-434b-e1a6-2819afb0ec11"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '.venv (Python 3.12.7)' requires the ipykernel package.\n",
+      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'c:/Users/PC/Desktop/ChaoticX/ChoaticX-main/.venv/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "!pip install ta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 391,
@@ -116,11 +127,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 398
+    },
+    "executionInfo": {
+     "elapsed": 99,
+     "status": "ok",
+     "timestamp": 1747277162878,
+     "user": {
+      "displayName": "Yabanhito Narwoikie",
+      "userId": "03656859950307606706"
+     },
+     "user_tz": 420
+    },
+    "id": "_1PB2OFF1Pkk",
+    "outputId": "437cde30-c96c-400e-beaf-d87ebbca4d49"
+   },
+   "outputs": [],
+   "source": [
+    "api = BinanceAPI()\n",
+    "df_4h = api.get_ohlcv(interval='4h')\n",
+    "df_1d = api.get_ohlcv(interval='1D')\n",
+    "df_1h = api.get_ohlcv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "detector1h = ZoneDetector(df_1h)\n",
+    "zone_1h = detector1h.get_zones()\n",
+    "detector4h = ZoneDetector(df_4h,timeframe= \"4h\")\n",
+    "zone_4h = detector4h.get_zones()\n",
+    "detector1d = ZoneDetector(df_1d,timeframe=\"1D\")\n",
+    "zone_1d = detector1d.get_zones()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merger = ZoneMerger(zone_1h+zone_4h+zone_1d)\n",
+    "\n",
+    "zones = merger.merge()\n",
+    "#zones = merger.add_liq_confluence(zones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactor = ZoneReactor(df_1h, zones)\n",
+    "zones = reactor.get_zone_reaction()\n",
+    "zones = merger.getNearbyZone(zones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'zone_copy' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mUnboundLocalError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m zones = \u001b[43mreactor\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_next_target_zone\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\PC\\Desktop\\ChaoticX\\ChoaticX-main\\Core\\zone_reactions.py:77\u001b[39m, in \u001b[36mget_next_target_zone\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     74\u001b[39m next_low = next_zone[\u001b[33m'\u001b[39m\u001b[33mzone_low\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m     76\u001b[39m \u001b[38;5;66;03m# Check from touch_index forward\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m77\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(touch_index + \u001b[32m1\u001b[39m, \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m.candles)):\n\u001b[32m     78\u001b[39m     candle = \u001b[38;5;28mself\u001b[39m.candles.iloc[j]\n\u001b[32m     79\u001b[39m     high, low, open_, close = candle[\u001b[33m'\u001b[39m\u001b[33mhigh\u001b[39m\u001b[33m'\u001b[39m], candle[\u001b[33m'\u001b[39m\u001b[33mlow\u001b[39m\u001b[33m'\u001b[39m], candle[\u001b[33m'\u001b[39m\u001b[33mopen\u001b[39m\u001b[33m'\u001b[39m], candle[\u001b[33m'\u001b[39m\u001b[33mclose\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[31mUnboundLocalError\u001b[39m: cannot access local variable 'zone_copy' where it is not associated with a value"
+     ]
+    }
+   ],
+   "source": [
+    "zones = reactor.get_next_target_zone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'zone_high': np.float32(113067.31),\n",
+       " 'zone_low': np.float32(102969.484),\n",
+       " 'zone_width': np.float32(10097.828),\n",
+       " 'types': ['Bearish OB',\n",
+       "  'Sell-Side Liq',\n",
+       "  'Buy-Side Liq',\n",
+       "  'Bullish OB',\n",
+       "  'Bearish FVG'],\n",
+       " 'timeframes': ['4h', '1h', '1D'],\n",
+       " 'count': 10,\n",
+       " 'start_index': 21168,\n",
+       " 'end_index': 25848,\n",
+       " 'mid_index': 23574,\n",
+       " 'touch_type': 'body_close_above',\n",
+       " 'touch_candle': open        113722.828125\n",
+       " high        113760.968750\n",
+       " low         112985.640625\n",
+       " close       113420.000000\n",
+       " volume        1310.784546\n",
+       " ema20       111490.173210\n",
+       " ema50       110466.427775\n",
+       " atr            562.486114\n",
+       " rsi             82.061862\n",
+       " atr_mean       422.322237\n",
+       " Name: 2025-07-10 18:00:00, dtype: float64,\n",
+       " 'touch_index': 26094,\n",
+       " 'distance_to_nearest_zone_above': inf,\n",
+       " 'nearest_zone_above': None,\n",
+       " 'distance_to_nearest_zone_below': np.float32(439.96094),\n",
+       " 'nearest_zone_below': {'zone_high': np.float32(102529.52),\n",
+       "  'zone_low': np.float32(96911.47),\n",
+       "  'zone_width': np.float32(5618.0547),\n",
+       "  'types': ['Bearish FVG', 'Bullish FVG', 'Buy-Side Liq'],\n",
+       "  'timeframes': ['4h', '1h', '1D'],\n",
+       "  'count': 6,\n",
+       "  'start_index': 21062,\n",
+       "  'end_index': 24678,\n",
+       "  'mid_index': 23036,\n",
+       "  'touch_type': 'body_close_inside',\n",
+       "  'touch_candle': open        102678.523438\n",
+       "  high        102743.429688\n",
+       "  low         102352.859375\n",
+       "  close       102510.101562\n",
+       "  volume         479.238495\n",
+       "  ema20       103203.255665\n",
+       "  ema50       103468.766374\n",
+       "  atr            779.975946\n",
+       "  rsi             45.217842\n",
+       "  atr_mean       575.499865\n",
+       "  Name: 2025-05-12 21:00:00, dtype: float64,\n",
+       "  'touch_index': 24681}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zones[-1]"
    ]
   },
   {
@@ -167,35 +327,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 398
-    },
-    "executionInfo": {
-     "elapsed": 99,
-     "status": "ok",
-     "timestamp": 1747277162878,
-     "user": {
-      "displayName": "Yabanhito Narwoikie",
-      "userId": "03656859950307606706"
-     },
-     "user_tz": 420
-    },
-    "id": "_1PB2OFF1Pkk",
-    "outputId": "437cde30-c96c-400e-beaf-d87ebbca4d49"
-   },
-   "outputs": [],
-   "source": [
-    "api = BinanceAPI()\n",
-    "df_4h = api.get_ohlcv(interval='4h')\n",
-    "df_1d = api.get_ohlcv(interval='1D')\n",
-    "df_1h = api.get_ohlcv()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "WA_1F9HwAOOT"
    },
    "outputs": [],
@@ -209,33 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "detector1h = ZoneDetector(df_1h)\n",
-    "zone_1h = detector1h.get_zones()\n",
-    "detector4h = ZoneDetector(df_4h,timeframe= \"4h\")\n",
-    "zone_4h = detector4h.get_zones()\n",
-    "detector1d = ZoneDetector(df_1d,timeframe=\"1D\")\n",
-    "zone_1d = detector1d.get_zones()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "zone_1d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merger = ZoneMerger(zone_1h+zone_4h+zone_1d)\n",
-    "\n",
-    "#zones = merger.merge()\n",
-    "#zones = merger.add_liq_confluence(zones)"
    ]
   },
   {
@@ -2221,7 +2326,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
