Add Model Training with 3 different Models and Add fillNAN in data Cleaning

--- a/Notebooks/backtest2.ipynb
+++ b/Notebooks/backtest2.ipynb
@@ -136,28 +136,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['type', 'conf_is_buy_zone', 'az_conf_15min_count', 'touch_index',\n",
-       "       'az_avg_ema_50', 'az_swept_index', 'conf_1min_count',\n",
-       "       'conf_count_BrLiq', 'time_frame', 'az_conf_count_BuFVG',\n",
-       "       ...\n",
-       "       'az_atr', 'az_volume_on_creation', 'zone_width', 'rsi', 'az_momentum_5',\n",
-       "       'az_zone_width', 'is_target', 'ema 20', 'zone_low', 'conf_1D_count'],\n",
-       "      dtype='object', length=101)"
+       "type                   77186\n",
+       "conf_is_buy_zone       77186\n",
+       "az_conf_15min_count    77186\n",
+       "touch_index            77186\n",
+       "az_avg_ema_50          27769\n",
+       "                       ...  \n",
+       "az_zone_width          46632\n",
+       "is_target              77119\n",
+       "ema 20                 69455\n",
+       "zone_low               77186\n",
+       "conf_1D_count          77186\n",
+       "Length: 101, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns"
+    "df.notna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>conf_is_buy_zone</th>\n",
+       "      <th>az_conf_15min_count</th>\n",
+       "      <th>touch_index</th>\n",
+       "      <th>az_avg_ema_50</th>\n",
+       "      <th>az_swept_index</th>\n",
+       "      <th>conf_1min_count</th>\n",
+       "      <th>conf_count_BrLiq</th>\n",
+       "      <th>time_frame</th>\n",
+       "      <th>az_conf_count_BuFVG</th>\n",
+       "      <th>...</th>\n",
+       "      <th>az_atr</th>\n",
+       "      <th>az_volume_on_creation</th>\n",
+       "      <th>zone_width</th>\n",
+       "      <th>rsi</th>\n",
+       "      <th>az_momentum_5</th>\n",
+       "      <th>az_zone_width</th>\n",
+       "      <th>is_target</th>\n",
+       "      <th>ema 20</th>\n",
+       "      <th>zone_low</th>\n",
+       "      <th>conf_1D_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>244.437193</td>\n",
+       "      <td>896.084351</td>\n",
+       "      <td>317.21875</td>\n",
+       "      <td>30.983213</td>\n",
+       "      <td>481.625000</td>\n",
+       "      <td>436.320312</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>94655.281197</td>\n",
+       "      <td>94433.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>285.489452</td>\n",
+       "      <td>488.631897</td>\n",
+       "      <td>317.21875</td>\n",
+       "      <td>30.983213</td>\n",
+       "      <td>1539.203125</td>\n",
+       "      <td>349.195312</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>94655.281197</td>\n",
+       "      <td>94433.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>287.374696</td>\n",
+       "      <td>625.762207</td>\n",
+       "      <td>317.21875</td>\n",
+       "      <td>30.983213</td>\n",
+       "      <td>735.460938</td>\n",
+       "      <td>612.953125</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>94655.281197</td>\n",
+       "      <td>94433.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>528.025741</td>\n",
+       "      <td>593.541870</td>\n",
+       "      <td>317.21875</td>\n",
+       "      <td>30.983213</td>\n",
+       "      <td>798.812500</td>\n",
+       "      <td>592.078125</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>94655.281197</td>\n",
+       "      <td>94433.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>534.926053</td>\n",
+       "      <td>510.520264</td>\n",
+       "      <td>317.21875</td>\n",
+       "      <td>30.983213</td>\n",
+       "      <td>-143.343750</td>\n",
+       "      <td>321.523438</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>94655.281197</td>\n",
+       "      <td>94433.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 101 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   type  conf_is_buy_zone  az_conf_15min_count  touch_index  az_avg_ema_50  \\\n",
+       "0     1                 1                    0         31.0            NaN   \n",
+       "1     1                 1                    0         31.0            NaN   \n",
+       "2     1                 1                    0         31.0            NaN   \n",
+       "3     1                 1                    0         31.0            NaN   \n",
+       "4     1                 1                    0         31.0            NaN   \n",
+       "\n",
+       "   az_swept_index  conf_1min_count  conf_count_BrLiq  time_frame  \\\n",
+       "0             NaN                0                 0           5   \n",
+       "1             NaN                0                 0           5   \n",
+       "2             NaN                0                 0           5   \n",
+       "3             NaN                0                 0           5   \n",
+       "4             NaN                0                 0           5   \n",
+       "\n",
+       "   az_conf_count_BuFVG  ...      az_atr  az_volume_on_creation  zone_width  \\\n",
+       "0                    2  ...  244.437193             896.084351   317.21875   \n",
+       "1                    2  ...  285.489452             488.631897   317.21875   \n",
+       "2                    2  ...  287.374696             625.762207   317.21875   \n",
+       "3                    2  ...  528.025741             593.541870   317.21875   \n",
+       "4                    1  ...  534.926053             510.520264   317.21875   \n",
+       "\n",
+       "         rsi  az_momentum_5  az_zone_width  is_target        ema 20  zone_low  \\\n",
+       "0  30.983213     481.625000     436.320312        1.0  94655.281197   94433.5   \n",
+       "1  30.983213    1539.203125     349.195312        0.0  94655.281197   94433.5   \n",
+       "2  30.983213     735.460938     612.953125        0.0  94655.281197   94433.5   \n",
+       "3  30.983213     798.812500     592.078125        0.0  94655.281197   94433.5   \n",
+       "4  30.983213    -143.343750     321.523438        0.0  94655.281197   94433.5   \n",
+       "\n",
+       "   conf_1D_count  \n",
+       "0              0  \n",
+       "1              0  \n",
+       "2              0  \n",
+       "3              0  \n",
+       "4              0  \n",
+       "\n",
+       "[5 rows x 101 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
