Add new route and remove certain features

--- a/Notebooks/backtest2.ipynb
+++ b/Notebooks/backtest2.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 391,
@@ -96,140 +96,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../Datasets/train_dataset.csv')\n"
+    "df = pd.read_csv('../Datasets/train_dataset.csv')\n",
+    "list(df.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'touch_type': 15.917057991027832,\n",
-       " 'distance_to_nearest_zone_above': 13.719236373901367,\n",
-       " 'count': 9.527777671813965,\n",
-       " 'conf_1h_count': 7.502933979034424,\n",
-       " 'below_ema 20': 7.195952892303467,\n",
-       " 'above_conf_count_BuLiq': 5.7219085693359375,\n",
-       " 'below_type': 5.520761966705322,\n",
-       " 'distance_to_nearest_zone_below': 5.377983093261719,\n",
-       " 'above_atr': 5.340757846832275,\n",
-       " 'conf_count_BuFVG': 5.294818878173828,\n",
-       " 'candle_high': 4.895845890045166,\n",
-       " 'below_zone_low': 4.634347915649414,\n",
-       " 'below_conf_count_BuLiq': 4.224490165710449,\n",
-       " 'volume_on_creation': 4.195095539093018,\n",
-       " 'above_conf_count_BrFVG': 4.169815540313721,\n",
-       " 'below_avg_volume_past_5': 4.129554748535156,\n",
-       " 'candle_open': 4.053562164306641,\n",
-       " 'candle_close': 3.984543800354004,\n",
-       " 'conf_count_BuLiq': 3.963528633117676,\n",
-       " 'conf_15min_count': 3.5624382495880127,\n",
-       " 'below_zone_width': 3.4329915046691895,\n",
-       " 'below_avg_volume_around_zone': 3.4091732501983643,\n",
-       " 'avg_volume_past_5': 3.3649494647979736,\n",
-       " 'conf_count_BrOB': 3.323895215988159,\n",
-       " 'below_rsi': 3.248492479324341,\n",
-       " 'candle_rsi': 3.2483253479003906,\n",
-       " 'conf_3min_count': 3.227132797241211,\n",
-       " 'body_size': 3.1764121055603027,\n",
-       " 'above_avg_volume_past_5': 3.1188583374023438,\n",
-       " 'above_zone_width': 3.0998497009277344,\n",
-       " 'above_conf_count_BuOB': 3.0901005268096924,\n",
-       " 'conf_count_BuOB': 3.039966106414795,\n",
-       " 'zone_high': 2.9579718112945557,\n",
-       " 'target': 2.953662157058716,\n",
-       " 'below_atr': 2.935729742050171,\n",
-       " 'wick_ratio': 2.911783218383789,\n",
-       " 'atr_mean': 2.7676007747650146,\n",
-       " 'below_zone_high': 2.7297286987304688,\n",
-       " 'ema 20': 2.617913007736206,\n",
-       " 'below_momentum_5': 2.6095211505889893,\n",
-       " 'conf_1min_count': 2.6046183109283447,\n",
-       " 'momentum_5': 2.504833698272705,\n",
-       " 'candle_low': 2.4810702800750732,\n",
-       " 'below_conf_1h_count': 2.4667203426361084,\n",
-       " 'below_count': 2.457002639770508,\n",
-       " 'below_avg_atr': 2.442028284072876,\n",
-       " 'candle_atr_mean': 2.3861989974975586,\n",
-       " 'below_wick_ratio': 2.3807430267333984,\n",
-       " 'conf_count_BrFVG': 2.3716952800750732,\n",
-       " 'prev_volatility_5': 2.368624448776245,\n",
-       " 'candle_ema20': 2.308192491531372,\n",
-       " 'above_atr_mean': 2.2988922595977783,\n",
-       " 'above_zone_high': 2.279587745666504,\n",
-       " 'below_avg_rsi': 2.2730045318603516,\n",
-       " 'above_volume_on_creation': 2.270702362060547,\n",
-       " 'avg_rsi': 2.2143678665161133,\n",
-       " 'above_body_size': 2.1980650424957275,\n",
-       " 'below_conf_1min_count': 2.186560869216919,\n",
-       " 'candle_volume': 2.1648378372192383,\n",
-       " 'above_ema 20': 2.147610902786255,\n",
-       " 'zone_width': 2.106428384780884,\n",
-       " 'above_rsi': 2.0682809352874756,\n",
-       " 'above_momentum_5': 2.044466018676758,\n",
-       " 'below_ema 50': 1.9022575616836548,\n",
-       " 'above_conf_1h_count': 1.8370522260665894,\n",
-       " 'below_body_size': 1.7191979885101318,\n",
-       " 'conf_count_BrLiq': 1.7172322273254395,\n",
-       " 'below_avg_ema_20': 1.6693785190582275,\n",
-       " 'atr': 1.558739185333252,\n",
-       " 'below_conf_count_BuOB': 1.5509389638900757,\n",
-       " 'below_conf_count_BuFVG': 1.500038504600525,\n",
-       " 'above_conf_count_BrLiq': 1.490531086921692,\n",
-       " 'candle_ema50': 1.4708653688430786,\n",
-       " 'below_conf_count_BrLiq': 1.4552593231201172,\n",
-       " 'type': 1.332888126373291,\n",
-       " 'above_conf_count_BrOB': 1.1504571437835693,\n",
-       " 'below_conf_count_BrFVG': 0.9100236892700195,\n",
-       " 'above_time_frame': 0.7534046769142151,\n",
-       " 'above_conf_1D_count': 0.48588109016418457,\n",
-       " 'above_avg_rsi': 0.3922140598297119,\n",
-       " 'equal_level_deviation': 0.2180424928665161}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "modelHandler = ModelHandler(model_type='xgb')\n",
-    "modelHandler.load('../Models/model.pkl')\n",
-    "data = modelHandler.getFeatureImportance(feature_names=list(df.columns))\n",
+    "modelHandler.load('../Models/Model_1h_4h_1D_.pkl')\n",
+    "columns = list(df.columns)\n",
+    "columns.remove('target')\n",
+    "data = modelHandler.getFeatureImportance(feature_names=columns)\n",
     "sorted_importance = dict(sorted(data.items(), key=lambda item: item[1], reverse=True))\n",
-    "\n",
     "sorted_importance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'below_ema 50': 1.9022575616836548,\n",
-       " 'below_body_size': 1.7191979885101318,\n",
-       " 'below_avg_ema_20': 1.6693785190582275,\n",
-       " 'below_conf_count_BuOB': 1.5509389638900757,\n",
-       " 'below_conf_count_BuFVG': 1.500038504600525,\n",
-       " 'below_conf_count_BrLiq': 1.4552593231201172,\n",
-       " 'below_conf_count_BrFVG': 0.9100236892700195}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "set(columns) - set(sorted_importance.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "below_features = {key : value for key, value in sorted_importance.items() if key.startswith('below_') and value < 2}\n",
     "below_features"
@@ -237,25 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'above_conf_1h_count': 1.8370522260665894,\n",
-       " 'above_conf_count_BrLiq': 1.490531086921692,\n",
-       " 'above_conf_count_BrOB': 1.1504571437835693,\n",
-       " 'above_time_frame': 0.7534046769142151,\n",
-       " 'above_conf_1D_count': 0.48588109016418457,\n",
-       " 'above_avg_rsi': 0.3922140598297119}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "above_features = {key : value for key, value in sorted_importance.items() if key.startswith('above_') and value < 2}\n",
     "above_features"
@@ -263,130 +150,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "id": "9QPRmFJcAOO9",
     "outputId": "4a612dbf-54b1-4272-e035-8b4bbc176cf9"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'target': 1.0,\n",
-       " 'above_time_frame': 0.3679320746300365,\n",
-       " 'above_conf_count_BuLiq': 0.32349983828793344,\n",
-       " 'above_wick_ratio': 0.2788409060828912,\n",
-       " 'above_conf_is_buy_zone': 0.27803835422704554,\n",
-       " 'distance_to_nearest_zone_above': 0.27750098171455184,\n",
-       " 'above_conf_count_BrLiq': 0.2729358750076576,\n",
-       " 'distance_to_nearest_zone_below': 0.2278224402901493,\n",
-       " 'above_zone_width': 0.2179695235238414,\n",
-       " 'above_conf_1h_count': 0.20407302013541723,\n",
-       " 'above_atr_mean': 0.1989489561604861,\n",
-       " 'above_body_size': 0.19493945503478988,\n",
-       " 'above_conf_count_BuFVG': 0.18134969920707475,\n",
-       " 'momentum_5': 0.17340371076670666,\n",
-       " 'above_conf_count_BuOB': 0.17224058388735491,\n",
-       " 'touch_type': 0.17074302384753248,\n",
-       " 'rsi': 0.16675392036937475,\n",
-       " 'above_conf_count_BrFVG': 0.16339976973597548,\n",
-       " 'below_type': 0.15351445124399332,\n",
-       " 'below_liquidity_height': 0.14885594802511956,\n",
-       " 'below_avg_swing_strength': 0.1488558235669987,\n",
-       " 'above_conf_count_BrOB': 0.14322267617459053,\n",
-       " 'below_avg_rsi': 0.14222243323783554,\n",
-       " 'below_equal_level_deviation': 0.13341946898176274,\n",
-       " 'prev_volatility_5': 0.12618567570079872,\n",
-       " 'above_avg_rsi': 0.113818680027164,\n",
-       " 'body_size': 0.10962265807645548,\n",
-       " 'above_liquidity_height': 0.10821282427105065,\n",
-       " 'above_avg_swing_strength': 0.10821273012013503,\n",
-       " 'conf_is_buy_zone': 0.10817741354016322,\n",
-       " 'atr': 0.10183781038209572,\n",
-       " 'below_avg_volume_around_zone': 0.0995484397778116,\n",
-       " 'avg_volume_past_5': 0.09788190752019901,\n",
-       " 'below_avg_atr': 0.09767280630636448,\n",
-       " 'volume_on_creation': 0.09764366483676169,\n",
-       " 'zone_width': 0.09383321563441463,\n",
-       " 'below_avg_atr_mean': 0.08767914964316131,\n",
-       " 'below_count': 0.08576488149907131,\n",
-       " 'above_equal_level_deviation': 0.08512632626637187,\n",
-       " 'atr_mean': 0.08494522234139344,\n",
-       " 'above_count': 0.0847350579845487,\n",
-       " 'below_avg_ema_20': 0.08420553909172777,\n",
-       " 'above_volume_on_creation': 0.08338672210630223,\n",
-       " 'below_avg_ema_50': 0.08250731228481986,\n",
-       " 'candle_volume': 0.07980158222656217,\n",
-       " 'above_avg_volume_past_5': 0.07903453269260212,\n",
-       " 'conf_count_BuLiq': 0.07020175748854228,\n",
-       " 'above_avg_ema_50': 0.06472919999223496,\n",
-       " 'above_avg_ema_20': 0.06459841659565095,\n",
-       " 'below_conf_count_BuOB': 0.06339540600240817,\n",
-       " 'below_conf_count_BuLiq': 0.05675831780467145,\n",
-       " 'above_avg_atr_mean': 0.05584804545227507,\n",
-       " 'above_avg_atr': 0.054853644677970895,\n",
-       " 'below_avg_volume_past_5': 0.044441673499906686,\n",
-       " 'above_avg_volume_around_zone': 0.04006832479496786,\n",
-       " 'below_conf_count_BrLiq': 0.03911580596713019,\n",
-       " 'below_conf_1h_count': 0.03906193173311841,\n",
-       " 'below_conf_count_BrOB': 0.03905472673888589,\n",
-       " 'below_momentum_5': 0.03866159483541843,\n",
-       " 'below_conf_is_buy_zone': 0.03603711637990404,\n",
-       " 'below_conf_count_BuFVG': 0.022649170099015594,\n",
-       " 'below_volume_on_creation': 0.021381827878787497,\n",
-       " 'conf_count_BuOB': 0.020084125906993322,\n",
-       " 'candle_rsi': 0.011051619520189784,\n",
-       " 'below_conf_count_BrFVG': 0.009988113232904862,\n",
-       " 'conf_count_BuFVG': -0.004287583967929853,\n",
-       " 'type': -0.009113299721581905,\n",
-       " 'conf_1h_count': -0.011621597479099192,\n",
-       " 'below_atr': -0.021358945206392047,\n",
-       " 'below_zone_width': -0.02416880503239171,\n",
-       " 'conf_count_BrLiq': -0.025171767593414406,\n",
-       " 'below_prev_volatility_5': -0.026175158690025953,\n",
-       " 'below_atr_mean': -0.029391269513500635,\n",
-       " 'conf_count_BrFVG': -0.029560202657380293,\n",
-       " 'conf_count_BrOB': -0.03466151380026564,\n",
-       " 'candle_atr': -0.03570804586741975,\n",
-       " 'below_body_size': -0.03768911105082633,\n",
-       " 'wick_ratio': -0.05169560674293845,\n",
-       " 'candle_close': -0.06427068400181134,\n",
-       " 'candle_high': -0.06463604050340384,\n",
-       " 'candle_low': -0.06468049304249471,\n",
-       " 'candle_open': -0.06502883019363084,\n",
-       " 'above_prev_volatility_5': -0.06510229804050752,\n",
-       " 'candle_ema20': -0.0664980868731937,\n",
-       " 'candle_ema50': -0.06937856516728372,\n",
-       " 'candle_atr_mean': -0.06968491426086082,\n",
-       " 'below_rsi': -0.0707762866043165,\n",
-       " 'zone_high': -0.07118159831899569,\n",
-       " 'zone_low': -0.07332745889810366,\n",
-       " 'below_zone_high': -0.0750380885699798,\n",
-       " 'below_zone_low': -0.07887029676070134,\n",
-       " 'ema 20': -0.07978219326800291,\n",
-       " 'above_atr': -0.08113765336397406,\n",
-       " 'ema 50': -0.0832078020315527,\n",
-       " 'below_wick_ratio': -0.09586260519944413,\n",
-       " 'above_zone_low': -0.11826620907909541,\n",
-       " 'above_zone_high': -0.12247643606636797,\n",
-       " 'below_ema 20': -0.1277000944422694,\n",
-       " 'below_ema 50': -0.12927468731298425,\n",
-       " 'above_momentum_5': -0.13217618311733248,\n",
-       " 'above_ema 50': -0.13582251668734735,\n",
-       " 'above_rsi': -0.13714848601643315,\n",
-       " 'above_ema 20': -0.13727979099108098,\n",
-       " 'above_type': -0.3380327386929459}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "correlations = df.corr()['target'].sort_values(ascending=False)\n",
     "correlations_dict = correlations.to_dict()\n",
-    "{key : value for key,value in correlations_dict.items() if  pd.notna(value) or value > 0.1 or value < -0.1}\n"
+    "notcorr = [key  for key,value in correlations_dict.items() if not pd.notna(value) or value == 0]\n",
+    "notcorr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "not_corr_importances = {key : value for key, value in data.items() if  key  in notcorr}\n",
+    "not_corr_importances"
    ]
   },
   {
