add new TA (alpha,beta,gamma calculation)

--- a/Notebooks/backtest2.ipynb
+++ b/Notebooks/backtest2.ipynb
@@ -65,6 +65,7 @@
     "from Core.zone_detection import ZoneDetector\n",
     "from Core.zone_merge import ZoneMerger\n",
     "from Core.zone_reactions import ZoneReactor\n",
+    "from Core.RollingRegression import RollingRegression\n",
     "from ML.Model import ModelHandler\n"
    ]
   },
@@ -403,6 +404,97 @@
     "\n",
     "# Example usage:\n",
     "print(get_orderbook_price(\"BTCUSDT\", 109000.00))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n",
+    "\n",
+    "# --- Fetch and align data ---\n",
+    "df_btc = BinanceAPI().get_ohlcv(symbol='BTCUSDT', lookback='6 months')\n",
+    "df_sol = BinanceAPI().get_ohlcv(symbol='BNBUSDT', lookback='6 months')\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'BTC': df_btc['close'],\n",
+    "    'SOL': df_sol['close']\n",
+    "}).dropna()\n",
+    "\n",
+    "# --- Calculate returns ---\n",
+    "df = df.pct_change().dropna()\n",
+    "\n",
+    "# --- Rolling polynomial regression (degree = 2) ---\n",
+    "window = 20\n",
+    "alphas, betas, gammas, r2s, timestamps = [], [], [], [], []\n",
+    "\n",
+    "poly = PolynomialFeatures(degree=2)\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "for i in range(len(df) - window):\n",
+    "    y = df['SOL'].iloc[i:i+window].values.reshape(-1, 1)\n",
+    "    X = df['BTC'].iloc[i:i+window].values.reshape(-1, 1)\n",
+    "    \n",
+    "    X_poly = poly.fit_transform(X)\n",
+    "    model.fit(X_poly, y)\n",
+    "    \n",
+    "    alpha = float(model.intercept_)\n",
+    "    beta = float(model.coef_[0][1])\n",
+    "    gamma = float(model.coef_[0][2])\n",
+    "    r2 = model.score(X_poly, y)\n",
+    "    \n",
+    "    alphas.append(alpha)\n",
+    "    betas.append(beta)\n",
+    "    gammas.append(gamma)\n",
+    "    r2s.append(r2)\n",
+    "    timestamps.append(df.index[i + window])\n",
+    "\n",
+    "# --- Combine results ---\n",
+    "result = pd.DataFrame({\n",
+    "    'timestamp': timestamps,\n",
+    "    'alpha': alphas,\n",
+    "    'beta': betas,\n",
+    "    'gamma': gammas,\n",
+    "    'r2': r2s\n",
+    "}).set_index('timestamp')\n",
+    "\n",
+    "print(result.tail())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_btc = BinanceAPI().get_ohlcv(symbol='BTCUSDT', lookback='6 months')\n",
+    "df_sol = BinanceAPI().get_ohlcv(symbol='BNBUSDT', lookback='6 months')\n",
+    "\n",
+    "rolling = RollingRegression(based_df=df_sol,market_df=df_btc)\n",
+    "df_sol = rolling.AddRegressionValues()\n",
+    "df_sol.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.plot(result['beta'], label='Beta')\n",
+    "plt.plot(result['gamma'], label='Gamma', alpha=0.6)\n",
+    "plt.title('Rolling Beta & Gamma(SOL vs BTC)')\n",
+    "plt.legend()\n",
+    "plt.show()\n"
    ]
   },
   {
